Fix issue with divs overlapping

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,7 +14,6 @@ html {
 .App {
   text-align: center;
   background-color: #282c34;
-  height: 100vh;
 }
 
 // .logo {
