--- a/src/pages/SignUp/SignUp.scss
+++ b/src/pages/SignUp/SignUp.scss
@@ -7,7 +7,8 @@ $main-green: #2A9C57;
 .sign-up {
   text-align: center;
   background-color: #282c34;
-  height: 100vh;
+  display: flex;
+  flex-direction: column;
 
   .form-container {
     margin: auto;
@@ -16,9 +17,11 @@ $main-green: #2A9C57;
   .home-heading {
     display: flex;
     flex-direction: column;
-    height: 16vh;
+    // height: 16vh;
     justify-content: space-between;
     margin: 2vh;
+    padding: 1vh;
+
 
 
     h1 {
